--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -71,7 +71,7 @@
                 <i class="icon icon-rss black"></i>
             </a>
         </nav>
-        <p>Join the community</p>
+        <p>Incorporated theme by <a href="https://sendtoinc.com">Inc</a></p>
     </div>
 </footer>
 
